What's new in PyObjC
====================

An overview of the relevant changes in new, and older, releases.

Version 3.2.2
-------------

Bugfixes:

* (None)

Version 3.2.1
-------------

Updates:

* Small change to the shared setup.py code for framework wrappers to allow
  building wheels for wrappers without a C exention on any system.

  This was mostly done to make it easier to provide wheels in future releases.

Bugfixes:

* Avoid build error with Python 2.7 when using the OSX 10.12 SDK, triggered
  when Python was build using MacPython support.

* Compatibility definitions for MAC_OS_X_VERSION_10_10, MAC_OS_X_VERSION_10_11
  and MAC_OS_X_VERSION_10_12 were wrong, adjusted these.

* Fix obscure crash in test suite of pyobjc-core: the definition of a class
  that claims to conform to a protocol but didn't actually conform could
  result in having a partial class definition in the Objective-C runtime.

* Updated implementation for ``NSMutableArray.extend``. This both avoids an
  error with the list interface tests in Python 3.6, and avoids unnecessary
  memory usage with large arguments.


Version 3.2
-----------

**Backward compatibility note:** Due to a change in the way the default
method signature is calculated PyObjC is now more strict in enforcing
the Python<->Objective-C mapping for selectors and a number of code patterns
that were allowed before are no longer allowed, in particular the following
method definitions raise ``objc.BadPrototypeError``::

   class MyObject (NSObject):
      def mymethod(self, a, b): ...
      def method_arg_(self, a, b, c): ...

If these methods are only used from Python and are never used from Objective-C
the error can be avoided by decorating these methods with ``objc.python_method``::

   class MyObject (NSObject):
      @objc.python_method
      def mymethod(self, a, b): ...

This cannnot be used for methods used from Objective-C, for those you will